work on appendix

--- a/main.bib
+++ b/main.bib
@@ -861,3 +861,72 @@ url = "https://sebastianrisi.com/self_assembling_ai"
 
  @article{Wu_Hu_Kong_2015, title={Flip-Rotate-Pooling Convolution and Split Dropout on Convolution Neural Networks for Image Classification}, url={http://arxiv.org/abs/1507.08754}, abstractNote={This paper presents a new version of Dropout called Split Dropout (sDropout) and rotational convolution techniques to improve CNNs’ performance on image classification. The widely used standard Dropout has advantage of preventing deep neural networks from overfitting by randomly dropping units during training. Our sDropout randomly splits the data into two subsets and keeps both rather than discards one subset. We also introduce two rotational convolution techniques, i.e. rotate-pooling convolution (RPC) and flip-rotate-pooling convolution (FRPC) to boost CNNs’ performance on the robustness for rotation transformation. These two techniques encode rotation invariance into the network without adding extra parameters. Experimental evaluations on ImageNet2012 classification task demonstrate that sDropout not only enhances the performance but also converges faster. Additionally, RPC and FRPC make CNNs more robust for rotation transformations. Overall, FRPC together with sDropout bring $1.18%$ (model of Zeiler and Fergus~cite{zeiler2013visualizing}, 10-view, top-1) accuracy increase in ImageNet 2012 classification task compared to the original network.}, note={arXiv:1507.08754 [cs]}, number={arXiv:1507.08754}, publisher={arXiv}, author={Wu, Fa and Hu, Peijun and Kong, Dexing}, year={2015}, month={Jul} }
 
+ @book{Costandi_2016, address={Cambridge, MA}, series={The MIT Press essential knowledge series}, title={Neuroplasticity}, ISBN={978-0-262-52933-4}, callNumber={QP364.5 .C67 2016}, publisher={The MIT Press}, author={Costandi, Moheb}, year={2016}, collection={The MIT Press essential knowledge series} }
+
+ @article{Takagi_2000, title={Roles of ion channels in EPSP integration at neuronal dendrites}, volume={37}, ISSN={01680102}, DOI={10.1016/S0168-0102(00)00120-6}, number={3}, journal={Neuroscience Research}, author={Takagi, Hiroshi}, year={2000}, month={Jul}, pages={167–171}, language={en} }
+
+ @article{Coombs_Eccles_Fatt_1955, title={The specific ionic conductances and the ionic movements across the motoneuronal membrane that produce the inhibitory post-synaptic potential}, volume={130}, ISSN={00223751}, DOI={10.1113/jphysiol.1955.sp005412}, number={2}, journal={The Journal of Physiology}, author={Coombs, J. S. and Eccles, J. C. and Fatt, P.}, year={1955}, month={Nov}, pages={326–373}, language={en} }
+
+ @inbook{Niv_Joel_Meilijson_Ruppin_2001, address={Berlin, Heidelberg}, series={Lecture Notes in Computer Science}, title={Evolution of Reinforcement Learning in Uncertain Environments: Emergence of Risk-Aversion and Matching}, volume={2159}, ISBN={978-3-540-42567-0}, url={http://link.springer.com/10.1007/3-540-44811-X_27}, DOI={10.1007/3-540-44811-X_27}, booktitle={Advances in Artificial Life}, publisher={Springer Berlin Heidelberg}, author={Niv, Yael and Joel, Daphna and Meilijson, Isaac and Ruppin, Eytan}, editor={Kelemen, Jozef and Sosík, Petr}, year={2001}, pages={252–261}, collection={Lecture Notes in Computer Science} }
+
+ @article{Salimans_Ho_Chen_Sidor_Sutskever_2017, title={Evolution Strategies as a Scalable Alternative to Reinforcement Learning}, url={http://arxiv.org/abs/1703.03864}, abstractNote={We explore the use of Evolution Strategies (ES), a class of black box optimization algorithms, as an alternative to popular MDP-based RL techniques such as Q-learning and Policy Gradients. Experiments on MuJoCo and Atari show that ES is a viable solution strategy that scales extremely well with the number of CPUs available: By using a novel communication strategy based on common random numbers, our ES implementation only needs to communicate scalars, making it possible to scale to over a thousand parallel workers. This allows us to solve 3D humanoid walking in 10 minutes and obtain competitive results on most Atari games after one hour of training. In addition, we highlight several advantages of ES as a black box optimization technique: it is invariant to action frequency and delayed rewards, tolerant of extremely long horizons, and does not need temporal discounting or value function approximation.}, note={arXiv:1703.03864 [cs, stat]}, number={arXiv:1703.03864}, publisher={arXiv}, author={Salimans, Tim and Ho, Jonathan and Chen, Xi and Sidor, Szymon and Sutskever, Ilya}, year={2017}, month={Sep} }
+
+@online{MNIST,
+  author = {LeCun, Yann and Cortes, Corinna},
+  title = {THE MNIST DATABASE of handwritten digits},
+  year = {1996},
+  url = {http://yann.lecun.com/exdb/mnist/},
+  urldate = {2022-09-05}
+}
+
+ @article{Mu_Gilmer_2019, title={MNIST-C: A Robustness Benchmark for Computer Vision}, url={http://arxiv.org/abs/1906.02337}, abstractNote={We introduce the MNIST-C dataset, a comprehensive suite of 15 corruptions applied to the MNIST test set, for benchmarking out-of-distribution robustness in computer vision. Through several experiments and visualizations we demonstrate that our corruptions significantly degrade performance of state-of-the-art computer vision models while preserving the semantic content of the test images. In contrast to the popular notion of adversarial robustness, our model-agnostic corruptions do not seek worst-case performance but are instead designed to be broad and diverse, capturing multiple failure modes of modern models. In fact, we find that several previously published adversarial defenses significantly degrade robustness as measured by MNIST-C. We hope that our benchmark serves as a useful tool for future work in designing systems that are able to learn robust feature representations that capture the underlying semantics of the input.}, note={arXiv:1906.02337 [cs]}, number={arXiv:1906.02337}, publisher={arXiv}, author={Mu, Norman and Gilmer, Justin}, year={2019}, month={Jun} }
+
+ @article{Kingma_Ba_2017, title={Adam: A Method for Stochastic Optimization}, url={http://arxiv.org/abs/1412.6980}, abstractNote={We introduce Adam, an algorithm for first-order gradient-based optimization of stochastic objective functions, based on adaptive estimates of lower-order moments. The method is straightforward to implement, is computationally efficient, has little memory requirements, is invariant to diagonal rescaling of the gradients, and is well suited for problems that are large in terms of data and/or parameters. The method is also appropriate for non-stationary objectives and problems with very noisy and/or sparse gradients. The hyper-parameters have intuitive interpretations and typically require little tuning. Some connections to related algorithms, on which Adam was inspired, are discussed. We also analyze the theoretical convergence properties of the algorithm and provide a regret bound on the convergence rate that is comparable to the best known results under the online convex optimization framework. Empirical results demonstrate that Adam works well in practice and compares favorably to other stochastic optimization methods. Finally, we discuss AdaMax, a variant of Adam based on the infinity norm.}, note={arXiv: 1412.6980}, journal={arXiv:1412.6980 [cs]}, author={Kingma, Diederik P. and Ba, Jimmy}, year={2017}, month={Jan} }
+
+ @article{Liang_Glossner_Wang_Shi_Zhang_2021, title={Pruning and Quantization for Deep Neural Network Acceleration: A Survey}, url={http://arxiv.org/abs/2101.09671}, abstractNote={Deep neural networks have been applied in many applications exhibiting extraordinary abilities in the field of computer vision. However, complex network architectures challenge efficient real-time deployment and require significant computation resources and energy costs. These challenges can be overcome through optimizations such as network compression. Network compression can often be realized with little loss of accuracy. In some cases accuracy may even improve. This paper provides a survey on two types of network compression: pruning and quantization. Pruning can be categorized as static if it is performed offline or dynamic if it is performed at run-time. We compare pruning techniques and describe criteria used to remove redundant computations. We discuss trade-offs in element-wise, channel-wise, shape-wise, filter-wise, layer-wise and even network-wise pruning. Quantization reduces computations by reducing the precision of the datatype. Weights, biases, and activations may be quantized typically to 8-bit integers although lower bit width implementations are also discussed including binary neural networks. Both pruning and quantization can be used independently or combined. We compare current techniques, analyze their strengths and weaknesses, present compressed network accuracy results on a number of frameworks, and provide practical guidance for compressing networks.}, note={arXiv:2101.09671 [cs]}, number={arXiv:2101.09671}, publisher={arXiv}, author={Liang, Tailin and Glossner, John and Wang, Lei and Shi, Shaobo and Zhang, Xiaotong}, year={2021}, month={Jun} }
+ 
+ @article{Bartunov_Santoro_Richards_Marris_Hinton_Lillicrap_2018, title={Assessing the Scalability of Biologically-Motivated Deep Learning Algorithms and Architectures}, url={http://arxiv.org/abs/1807.04587}, abstractNote={The backpropagation of error algorithm (BP) is impossible to implement in a real brain. The recent success of deep networks in machine learning and AI, however, has inspired proposals for understanding how the brain might learn across multiple layers, and hence how it might approximate BP. As of yet, none of these proposals have been rigorously evaluated on tasks where BP-guided deep learning has proved critical, or in architectures more structured than simple fully-connected networks. Here we present results on scaling up biologically motivated models of deep learning on datasets which need deep networks with appropriate architectures to achieve good performance. We present results on the MNIST, CIFAR-10, and ImageNet datasets and explore variants of target-propagation (TP) and feedback alignment (FA) algorithms, and explore performance in both fully- and locally-connected architectures. We also introduce weight-transport-free variants of difference target propagation (DTP) modified to remove backpropagation from the penultimate layer. Many of these algorithms perform well for MNIST, but for CIFAR and ImageNet we find that TP and FA variants perform significantly worse than BP, especially for networks composed of locally connected units, opening questions about whether new architectures and algorithms are required to scale these approaches. Our results and implementation details help establish baselines for biologically motivated deep learning schemes going forward.}, note={arXiv:1807.04587 [cs, stat]}, number={arXiv:1807.04587}, publisher={arXiv}, author={Bartunov, Sergey and Santoro, Adam and Richards, Blake A. and Marris, Luke and Hinton, Geoffrey E. and Lillicrap, Timothy}, year={2018}, month={Nov} }
+
+ @article{Crick_1989, title={The recent excitement about neural networks}, volume={337}, ISSN={0028-0836, 1476-4687}, DOI={10.1038/337129a0}, number={6203}, journal={Nature}, author={Crick, Francis}, year={1989}, month={Jan}, pages={129–132}, language={en} }
+
+ @article{Grossberg_1987, title={Competitive Learning: From Interactive Activation to Adaptive Resonance}, volume={11}, ISSN={03640213}, DOI={10.1111/j.1551-6708.1987.tb00862.x}, number={1}, journal={Cognitive Science}, author={Grossberg, Stephen}, year={1987}, month={Jan}, pages={23–63}, language={en} }
+
+ @article{Lillicrap_Cownden_Tweed_Akerman_2014, title={Random feedback weights support learning in deep neural networks}, url={http://arxiv.org/abs/1411.0247}, abstractNote={The brain processes information through many layers of neurons. This deep architecture is representationally powerful, but it complicates learning by making it hard to identify the responsible neurons when a mistake is made. In machine learning, the backpropagation algorithm assigns blame to a neuron by computing exactly how it contributed to an error. To do this, it multiplies error signals by matrices consisting of all the synaptic weights on the neuron’s axon and farther downstream. This operation requires a precisely choreographed transport of synaptic weight information, which is thought to be impossible in the brain. Here we present a surprisingly simple algorithm for deep learning, which assigns blame by multiplying error signals by random synaptic weights. We show that a network can learn to extract useful information from signals sent through these random feedback connections. In essence, the network learns to learn. We demonstrate that this new mechanism performs as quickly and accurately as backpropagation on a variety of problems and describe the principles which underlie its function. Our demonstration provides a plausible basis for how a neuron can be adapted using error signals generated at distal locations in the brain, and thus dispels long-held assumptions about the algorithmic constraints on learning in neural circuits.}, note={arXiv:1411.0247 [cs, q-bio]}, number={arXiv:1411.0247}, publisher={arXiv}, author={Lillicrap, Timothy P. and Cownden, Daniel and Tweed, Douglas B. and Akerman, Colin J.}, year={2014}, month={Nov} }
+
+@article{cifar_10,
+title= {CIFAR-10 (Canadian Institute for Advanced Research)},
+journal= {},
+author= {Alex Krizhevsky and Vinod Nair and Geoffrey Hinton},
+year= {},
+url= {http://www.cs.toronto.edu/~kriz/cifar.html},
+abstract= {The CIFAR-10 dataset consists of 60000 32x32 colour images in 10 classes, with 6000 images per class. There are 50000 training images and 10000 test images. 
+The dataset is divided into five training batches and one test batch, each with 10000 images. The test batch contains exactly 1000 randomly-selected images from each class. The training batches contain the remaining images in random order, but some training batches may contain more images from one class than another. Between them, the training batches contain exactly 5000 images from each class. },
+keywords= {Dataset},
+terms= {}
+}
+
+@inproceedings{deng2009imagenet, 
+  title={Imagenet: A large-scale hierarchical image database}, 
+  author={Deng, Jia and Dong, Wei and Socher, Richard and Li, Li-Jia and Li, Kai and Fei-Fei, Li},
+  booktitle={2009 IEEE conference on computer vision and pattern recognition}, 
+  pages={248--255}, 
+  year={2009}, 
+  organization={Ieee} 
+}
+
+ @inbook{Movellan_1991, title={Contrastive Hebbian Learning in the Continuous Hopfield Model}, ISBN={978-1-4832-1448-1}, url={https://linkinghub.elsevier.com/retrieve/pii/B978148321448150007X}, DOI={10.1016/B978-1-4832-1448-1.50007-X}, booktitle={Connectionist Models}, publisher={Elsevier}, author={Movellan, Javier R.}, year={1991}, pages={10–17}, language={en} }
+ 
+  @article{O_Reilly_1996, title={Biologically Plausible Error-Driven Learning Using Local Activation Differences: The Generalized Recirculation Algorithm}, volume={8}, ISSN={0899-7667, 1530-888X}, DOI={10.1162/neco.1996.8.5.895}, abstractNote={The error backpropagation learning algorithm (BP) is generally considered biologically implausible because it does not use locally available, activation-based variables. A version of BP that can be computed locally using bidirectional activation recirculation (Hinton and McClelland 1988) instead of backpropagated error derivatives is more biologically plausible. This paper presents a generalized version of the recirculation algorithm (GeneRec), which overcomes several limitations of the earlier algorithm by using a generic recurrent network with sigmoidal units that can learn arbitrary input/output mappings. However, the contrastive Hebbian learning algorithm (CHL, also known as DBM or mean field learning) also uses local variables to perform error-driven learning in a sigmoidal recurrent network. CHL was derived in a stochastic framework (the Boltzmann machine), but has been extended to the deterministic case in various ways, all of which rely on problematic approximations and assumptions, leading some to conclude that it is fundamentally flawed. This paper shows that CHL can be derived instead from within the BP framework via the GeneRec algorithm. CHL is a symmetry-preserving version of GeneRec that uses a simple approximation to the midpoint or second-order accurate Runge-Kutta method of numerical integration, which explains the generally faster learning speed of CHL compared to BI. Thus, all known fully general error-driven learning algorithms that use local activation-based variables in deterministic networks can be considered variations of the GeneRec algorithm (and indirectly, of the backpropagation algorithm). GeneRec therefore provides a promising framework for thinking about how the brain might perform error-driven learning. To further this goal, an explicit biological mechanism is proposed that would be capable of implementing GeneRec-style learning. This mechanism is consistent with available evidence regarding synaptic modification in neurons in the neocortex and hippocampus, and makes further predictions.}, number={5}, journal={Neural Computation}, author={O’Reilly, Randall C.}, year={1996}, month={Jul}, pages={895–938}, language={en} }
+
+ @inbook{Le__Cun_1986, address={Berlin, Heidelberg}, title={Learning Process in an Asymmetric Threshold Network}, ISBN={978-3-642-82659-7}, url={http://link.springer.com/10.1007/978-3-642-82657-3_24}, DOI={10.1007/978-3-642-82657-3_24}, booktitle={Disordered Systems and Biological Organization}, publisher={Springer Berlin Heidelberg}, author={Le Cun, Yann}, editor={Bienenstock, E. and Soulié, F. Fogelman and Weisbuch, G.}, year={1986}, pages={233–240}, language={en} }
+
+@inproceedings{hinton2007backpropagation,
+  title={How to do backpropagation in a brain},
+  author={Hinton, Geoffrey and others},
+  booktitle={Invited talk at the NIPS’2007 deep learning workshop},
+  volume={656},
+  pages={1--16},
+  year={2007}
+}
+
+ @article{Lee_Zhang_Fischer_Bengio_2015, title={Difference Target Propagation}, url={http://arxiv.org/abs/1412.7525}, abstractNote={Back-propagation has been the workhorse of recent successes of deep learning but it relies on infinitesimal effects (partial derivatives) in order to perform credit assignment. This could become a serious issue as one considers deeper and more non-linear functions, e.g., consider the extreme case of nonlinearity where the relation between parameters and cost is actually discrete. Inspired by the biological implausibility of back-propagation, a few approaches have been proposed in the past that could play a similar credit assignment role. In this spirit, we explore a novel approach to credit assignment in deep networks that we call target propagation. The main idea is to compute targets rather than gradients, at each layer. Like gradients, they are propagated backwards. In a way that is related but different from previously proposed proxies for back-propagation which rely on a backwards network with symmetric weights, target propagation relies on auto-encoders at each layer. Unlike back-propagation, it can be applied even when units exchange stochastic bits rather than real numbers. We show that a linear correction for the imperfectness of the auto-encoders, called difference target propagation, is very effective to make target propagation actually work, leading to results comparable to back-propagation for deep networks with discrete and continuous units and denoising auto-encoders and achieving state of the art for stochastic networks.}, note={arXiv:1412.7525 [cs]}, number={arXiv:1412.7525}, publisher={arXiv}, author={Lee, Dong-Hyun and Zhang, Saizheng and Fischer, Asja and Bengio, Yoshua}, year={2015}, month={Nov} }
