--- a/tex/related_work.tex
+++ b/tex/related_work.tex
@@ -37,15 +37,16 @@ Complex objects, such as mental constructs, can thus be seen as larger net fragm
 
 
 \section{Self-Organization}\seclbl{self_org_related}
-The human brain is self-organizing \sidecite{kelso1995dynamic}.
-Self-organization is the process by which systems consisting of many units spontaneously acquire their structure or function without interference from a external agent or system.
-The absence of a central control unit allow self-organizing systems to quickly adjust to new environmental conditions.
-Additionally, such systems have in-built redundancy with a high degree of robustness as they  are made of many simpler individual units.
-These individual units can even fail without the overall system breaking down.
-Dresp \sidecite{Dresp2020SevenPO} describes seven clearly identified properties of self-organization in the human brain: (i) modular connectivity, (ii) unsupervised learning, (iii) adaptive ability, (iv) functional resiliency, (v) functional plasticity, (vi) from-local-to-global functional organization, and (vii) dynamic system growth.
+%% THIS WAS MOVED TO INTRO
+%The human brain is self-organizing \sidecite{kelso1995dynamic}.
+%Self-organization is the process by which systems consisting of many units spontaneously acquire their structure or function without interference from a external agent or system.
+%The absence of a central control unit allow self-organizing systems to quickly adjust to new environmental conditions.
+%Additionally, such systems have in-built redundancy with a high degree of robustness as they  are made of many simpler individual units.
+%These individual units can even fail without the overall system breaking down.
+%Dresp \sidecite{Dresp2020SevenPO} describes seven clearly identified properties of self-organization in the human brain: (i) modular connectivity, (ii) unsupervised learning, (iii) adaptive ability, (iv) functional resiliency, (v) functional plasticity, (vi) from-local-to-global functional organization, and (vii) dynamic system growth.
 
-Before summarizing the literature specific to self-organization of neural networks, the general literature on self-organization with a focus on deep learning is described in the following.
-Many of these fundamental algorithms for self-organization serve as inspiration for how ANNs can be designed to be self-organizing.
+%Before summarizing the literature specific to self-organization of neural networks, the general literature on self-organization with a focus on deep learning is described in the following.
+%Many of these fundamental algorithms for self-organization serve as inspiration for how ANNs can be designed to be self-organizing.
 
 In nature, groups of millions units that solve complex tasks by using only local interactions can be observed.
 For example, ants can navigate difficult terrain with a local pheromone-based communication and thus form a collective type of intelligence.
@@ -252,4 +253,4 @@ This concept can also be applied to the rotation group in the final layers of a 
 
 
 
-TODO: somewhere it is argued that biologically-motivated algorithms work bad: This is shown here: https://arxiv.org/pdf/1807.04587.pdf -> add this as source
+TODO: somewhere it is argued that biologically-motivated algorithms work bad: This is shown here: https://arxiv.org/pdf/1807.04587.pdf -> add this as source -> \sidecite{Bartunov_Santoro_Richards_Marris_Hinton_Lillicrap_2018}
